Fixed message signing for response messages.